@@ -65,6 +65,7 @@ osd_lyrics_SOURCES = \
 	ol_player_juk.c \
 	ol_player_moc.c \
 	ol_player_mpd.c \
+	ol_player_muine.c \
 	ol_elapse_emulator.c \
 	ol_md5.c \
 	ol_utils.c \
