@@ -1,3 +1,7 @@
+2010-07-10  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_player_muine.c : ADD: Muine support
+
 2010-06-09  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_about.c: CHANGE: Apply changes in preference immediately, the OK button is removed
